# rag-personal-assistant

./: .env  README.md  app.py  pyproject.toml
db/: chroma.sqlite3
db_09a9ca40b57da9615b017fc11efdfe8c/dbad27b7-d219-4e98-887a-f9f608576af5/: index_metadata.pickle
db_42850d3afd7ca17cb662c437c087e1f5/223a4d0b-20e0-4544-b15c-6a0d9b1084d9/: index_metadata.pickle
db_519bfcdcdc3e1ee30628338deca0bf0e/: chroma.sqlite3
db_b6b6294a10d24a9d2dbe4ce7a6e65d13/73f2553e-51cc-445e-ae7e-1fa515733773/: index_metadata.pickle
db_cbe34290b16894a80c09ab9f61e88acf/: chroma.sqlite3
db_f77036a6da560cd8abdb1af5e6e1c744/6eacefe2-f8e3-49f9-899f-fc099c999352/: index_metadata.pickle
