[tool.poetry]
name = "personal-knowledge-assistant"
version = "0.1.0"
description = ""
authors = ["Ahmet Besiroglu <ahmetybesiroglu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
pypdf = "^5.0.1"
langchain-unstructured = "0.1.5"
streamlit = "^1.39.0"
unstructured = {extras = ["pdf"], version = "^0.15.14"}
unstructured-client = "0.25.0"
langchain-community = "^0.3.2"
chromadb = "^0.5.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
